lettuce: Enable video pause workaround for VT calls
A video pause workaround was made due to a signaling limitation in the QC
modem. Enable it.

Test: Manual
Bug: 62436425
Change-Id: Ic90ded9621929c0821894776c1191f20ddce9afa

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -501,6 +501,9 @@
     <!-- Flag specifying whether VT is available on device -->
     <bool name="config_device_vt_available">true</bool>
 
+    <!-- Enable video pause workaround when enabling/disabling the camera. -->
+    <bool name="config_useVideoPauseWorkaround">true</bool>
+
     <!-- Flag specifying whether VT should be available for carrier: independent of
          carrier provisioning. If false: hard disabled. If true: then depends on carrier
          provisioning, availability etc -->
